--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,3 +1,4 @@
+// Lato font
 @font-face {
   font-family: 'Lato';
   font-style: normal;
@@ -66,4 +67,28 @@
   font-style: italic;
   font-weight: 900;
   src: url(../fonts/Lato-BlackItalic.ttf) format('ttf');
+}
+
+// Oxygen
+
+/* latin */
+@font-face {
+  font-family: 'Oxygen';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Oxygen Light'), local('Oxygen-Light'), url(../fonts/Oxygen-Light.ttf) format('ttf');
+}
+/* latin */
+@font-face {
+  font-family: 'Oxygen';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Oxygen'), local('Oxygen-Regular'), url(../fonts/Oxygen-Regular.ttf) format('ttf');
+}
+/* latin */
+@font-face {
+  font-family: 'Oxygen';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Oxygen Bold'), local('Oxygen-Bold'), url(../fonts/Oxygen-Bold.ttf) format('ttf');
 }
