--- a/browsersupport/CoursesPlus.safariextension/scss_gen/hamburger.css
+++ b/browsersupport/CoursesPlus.safariextension/scss_gen/hamburger.css
@@ -54,76 +54,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 100;
-  src: url(../fonts/Lato-Hairline.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 300;
-  src: url(../fonts/Lato-Light.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Lato-Regular.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 700;
-  src: url(../fonts/Lato-Bold.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 900;
-  src: url(../fonts/Lato-Black.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 100;
-  src: url(../fonts/Lato-HairlineItalic.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 300;
-  src: url(../fonts/Lato-LightItalic.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 400;
-  src: url(../fonts/Lato-Italic.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 700;
-  src: url(../fonts/Lato-BoldItalic.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: 900;
-  src: url(../fonts/Lato-BlackItalic.ttf) format("ttf");
-}
-
 /* latin-ext */
 @font-face {
   font-family: 'Oxygen';
@@ -184,7 +114,7 @@ html {
 
 body {
   height: 100%;
-  font-family: Lato, Helvetica, Arial, sans-serif;
+  font-family: Oxygen, Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: 100;
   line-height: 20px;
