--- a/scss/hamburger.scss
+++ b/scss/hamburger.scss
@@ -192,6 +192,21 @@ body.nav-expanded {
 	text-align: center;
 }
 
+// Upcoming events
+#upcomingEventList {
+	text-align: left;
+}
+#upcomingEventList > li {
+	margin-bottom: 10px;
+}
+
+.upcoming-title {
+	font-size: 16px;
+}
+.upcoming-course {
+	font-size: 15px;
+}
+
 // Headers
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 300;
