--- a/scss/hamburger.scss
+++ b/scss/hamburger.scss
@@ -132,7 +132,7 @@ body.nav-expanded {
 .happyNavList {
 	font-size: 14pt;
 }
-#userinfo > .happyNavList > li {
+* > .happyNavList > li {
 	display: block;
 	color: black;
 	text-decoration: none;
@@ -146,7 +146,7 @@ body.nav-expanded {
 		text-decoration: none;
 	}
 }
-#userinfo > .happyNavList > li:hover {
+* > .happyNavList > li:hover {
 	background-color: #DDD;
 	cursor: pointer;
 	margin-left: 3px;
@@ -208,6 +208,10 @@ body.nav-expanded {
 	font-size: 15px;
 }
 
+.mutedtext {
+	color: gray;
+	font-size: 16pt;
+}
 // Headers
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 300;
