Added some padding to the options page

--- a/browsersupport/Chrome/etc/options.css
+++ b/browsersupport/Chrome/etc/options.css
@@ -9,6 +9,7 @@ body {
 	font-family: Oxygen, Helvetica, Arial, sans-serif !important;
 	margin-left: 10px;
 	margin-right: 10px;
+	padding-bottom: 10px;
 }
 
 .featureReq {
