--- a/browsersupport/Chrome/css/inject.css
+++ b/browsersupport/Chrome/css/inject.css
@@ -33,3 +33,10 @@ body.removeCurtain:before {
 .event > tbody {
 	background-color: white;
 }
+/* Fix HW assignments */
+.region-content > .course-content {
+	background-color: white;
+	border-radius: 10px;
+	box-shadow: 1px 2px 2px #eee;
+	padding-bottom: 10px;
+}
