Yay browser prefixes!

--- a/css/markEvents.css
+++ b/css/markEvents.css
@@ -2,6 +2,8 @@
     position:relative; 
 }
 .event {
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
 	transition: all 0.5s;
 }
 .eventComplete {
