Fix Eeshan's commit not working

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -189,7 +189,8 @@ a > img.icon {
 	width: 16px !important;
 	height: 16px !important;
 }
-/*This is for the printer freindly icon not to over lap*/
-#intro.box.generalbox{
-	margin-right: 159px;
+/* This is for the printer friendly icon not to overlap */
+.path-mod-glossary .printicon {
+	margin-right: 135px;
+	margin-left: 10px;
 }
