--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -207,3 +207,7 @@ a > img.icon {
 .moodle-dialogue-base .moodle-dialogue {
 	z-index: 9999;
 }
+/* Teacher edit fix */
+.editing .sitetopic .section .activity .activityinstance, .editing .course-content .section .activity .activityinstance, .editing .sitetopic .section .activity .contentwithoutlink, .editing .course-content .section .activity .contentwithoutlink {
+	padding-right: 0;
+}
