Edit not working?
Tried to fix not centered search bar… did not work. Please help. (thuds
code does not harm anything, it just does nothing)

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -211,3 +211,8 @@ a > img.icon {
 .editing .sitetopic .section .activity .activityinstance, .editing .course-content .section .activity .activityinstance, .editing .sitetopic .section .activity .contentwithoutlink, .editing .course-content .section .activity .contentwithoutlink {
 	padding-right: 0;
 }
+/* search fix */
+#search {
+    padding-top: 1px;
+    padding-bottom: 2px;
+}
