Remove not in month color

--- a/scss_gen/hamburger.css
+++ b/scss_gen/hamburger.css
@@ -316,7 +316,7 @@ body.nav-expanded #hamburger-icon {
 }
 
 .calendar-notInMonth {
-  background: lightgray;
+  background: transparent;
 }
 
 .page {
