--- a/scss/hamburger.scss
+++ b/scss/hamburger.scss
@@ -173,7 +173,7 @@ body.nav-expanded {
 	padding: 8px;
 }
 .calendar-notInMonth {
-	background: lightgray;
+	background: transparent;
 }
 
 // Pages
