--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -257,3 +257,7 @@ a > img.icon {
 	width: 12px !important;
 	height: 12px !important;
 }
+/* forum post shifting */
+.forumpost {
+	margin-left: 20px;
+}
