--- a/etc/options.css
+++ b/etc/options.css
@@ -9,8 +9,12 @@ body {
 	font-family: Oxygen, Helvetica, Arial, sans-serif !important;
 	margin-left: 10px;
 	margin-right: 10px;
-	padding-top: 90px;
+	padding-top: 80px;
 	padding-bottom: 10px;
+}
+
+h3 {
+	margin-top: 10px;
 }
 
 .featureReq {
