--- a/scss_gen/fonts.css
+++ b/scss_gen/fonts.css
@@ -1,3 +1,73 @@
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 100;
+  src: url(../fonts/lato/Lato-Hairline.ttf) format("ttf");
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: url(../fonts/lato/Lato-Light.ttf) format("ttf");
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/lato/Lato-Regular.ttf) format("ttf");
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  src: url(../fonts/lato/Lato-Bold.ttf) format("ttf");
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 900;
+  src: url(../fonts/lato/Lato-Black.ttf) format("ttf");
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 100;
+  src: url(../fonts/lato/Lato-HairlineItalic.ttf) format("ttf");
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 300;
+  src: url(../fonts/lato/Lato-LightItalic.ttf) format("ttf");
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 400;
+  src: url(../fonts/lato/Lato-Italic.ttf) format("ttf");
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 700;
+  src: url(../fonts/lato/Lato-BoldItalic.ttf) format("ttf");
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 900;
+  src: url(../fonts/lato/Lato-BlackItalic.ttf) format("ttf");
+}
+
 /* latin-ext */
 @font-face {
   font-family: 'Oxygen';
