Complete https://trello.com/c/6QIRt9dc/

--- a/css/messages.css
+++ b/css/messages.css
@@ -20,6 +20,10 @@
 .coursesplus-emotiontable > tbody > tr > td {
 	padding-bottom: 15px;
 }
+.emoteCell:hover {
+	background-color: #ddd;
+	cursor: pointer;
+}
 
 /* New message notification */
 #newmessageoverlay {
