--- a/scss_gen/fonts.css
+++ b/scss_gen/fonts.css
@@ -1,37 +1,5 @@
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 100;
-  src: url(../fonts/lato/Lato-Hairline.ttf) format("ttf");
-}
+@import url("https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900");
 
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 300;
-  src: url(../fonts/lato/Lato-Light.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/lato/Lato-Regular.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 700;
-  src: url(../fonts/lato/Lato-Bold.ttf) format("ttf");
-}
-
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 900;
-  src: url(../fonts/lato/Lato-Black.ttf) format("ttf");
-}
 
 @font-face {
   font-family: 'Lato';
