--- a/etc/options.css
+++ b/etc/options.css
@@ -209,3 +209,52 @@ h6 {
 label {
 	font-weight: normal;
 }
+
+.serviceSortable {
+	background-color: #ddd;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	padding-top: 25px;
+	min-width: 200px;
+	margin-right: 10px;
+	min-height: 200px;
+	position: relative;
+}
+.serviceSortable:before {	
+	font-size: 16px;
+	font-weight: bold;
+	position: absolute;
+	top: 3px;
+	left: 5px;
+}
+.serviceSortable li {
+	cursor: move;
+	display: block;
+	margin: 0 3px 3px 3px;
+	padding: 2px;
+	padding-left: 17px;
+	min-height: 32px;
+	font-size: 18px;
+}
+.serviceSortable li:not(.service-sortable-highlight):before {
+	font-family: "FontAwesome";
+	content: "\f047";
+	position: relative;
+	left: -6px;
+}
+
+
+.service-sortable-highlight {
+	background-color: #eee;
+}
+
+#menubarServicesInUse:before {
+	content: "Enabled";
+}
+#menubarServicesEligible:before {
+	content: "Eligible";
+}
+#menubarServicesUneligible:before {
+	content: "Uneligible";
+}
