Themes + navbar messages = this commit

--- a/css/themes/cosmo.support.css
+++ b/css/themes/cosmo.support.css
@@ -17,3 +17,9 @@ caption {
 .block .header h2 {
 	font-weight: bold;
 }
+
+.alert a {
+	color: white;
+	font-weight: bold;
+	text-decoration: underline;
+}
