--- a/css/themes/flatly.support.css
+++ b/css/themes/flatly.support.css
@@ -26,3 +26,9 @@ table.minicalendar td {
 	border: none;
 	border-radius: 0;
 }
+
+.alert a {
+	color: white;
+	font-weight: bold;
+	text-decoration: underline;
+}
