Fix my home grid problems

--- a/css/my.css
+++ b/css/my.css
@@ -10,3 +10,8 @@
 	position: relative;
 	top: -74px;
 }
+.coursebox.myHome .course_title h2 {
+	text-overflow: ellipsis;
+	width: 100%;
+	height: 15px;
+}
