Fix edit course modal with themes

--- a/css/customCourses.css
+++ b/css/customCourses.css
@@ -21,6 +21,10 @@
 	text-transform: uppercase;
 }
 
+.editCourseModal {
+	color: black !important; /* work around themes */
+}
+
 .selBox {
 	display: inline-block;
 	border: solid 1px black;
