move to one font to save space

--- a/scss/hamburger.scss
+++ b/scss/hamburger.scss
@@ -9,7 +9,7 @@ html {
  
 body {
 	height: 100%;
-	font-family: Oxygen, Helvetica, Arial, sans-serif;
+	font-family: "Lato", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	font-weight: 100;
 	line-height: 20px;
