--- a/scss_gen/fonts.css
+++ b/scss_gen/fonts.css
@@ -1,39 +1,64 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900");
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 100;
+  src: url(../fonts/lato/Lato-Hairline.ttf);
+}
 
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: url(../fonts/lato/Lato-Light.ttf);
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/lato/Lato-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  src: url(../fonts/lato/Lato-Bold.ttf);
+}
 
 @font-face {
   font-family: 'Lato';
   font-style: italic;
   font-weight: 100;
-  src: url(../fonts/lato/Lato-HairlineItalic.ttf) format("ttf");
+  src: url(../fonts/lato/Lato-HairlineItalic.ttf);
 }
 
 @font-face {
   font-family: 'Lato';
   font-style: italic;
   font-weight: 300;
-  src: url(../fonts/lato/Lato-LightItalic.ttf) format("ttf");
+  src: url(../fonts/lato/Lato-LightItalic.ttf);
 }
 
 @font-face {
   font-family: 'Lato';
   font-style: italic;
   font-weight: 400;
-  src: url(../fonts/lato/Lato-Italic.ttf) format("ttf");
+  src: url(../fonts/lato/Lato-Italic.ttf);
 }
 
 @font-face {
   font-family: 'Lato';
   font-style: italic;
   font-weight: 700;
-  src: url(../fonts/lato/Lato-BoldItalic.ttf) format("ttf");
+  src: url(../fonts/lato/Lato-BoldItalic.ttf);
 }
 
 @font-face {
   font-family: 'Lato';
   font-style: italic;
   font-weight: 900;
-  src: url(../fonts/lato/Lato-BlackItalic.ttf) format("ttf");
+  src: url(../fonts/lato/Lato-BlackItalic.ttf);
 }
 
 /* latin-ext */
