--- a/scss_gen/hamburger.css
+++ b/scss_gen/hamburger.css
@@ -54,58 +54,74 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-/* latin-ext */
 @font-face {
-  font-family: 'Oxygen';
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 100;
+  src: url(../fonts/lato/Lato-Hairline.ttf);
+}
+
+@font-face {
+  font-family: "Lato";
   font-style: normal;
   font-weight: 300;
-  src: local("Oxygen Light"), local("Oxygen-Light"), url(../fonts/oxygen/-1odZCVpKpOs9pNLq607fhJtnKITppOI_IvcXXDNrsc.woff2) format("woff2");
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+  src: url(../fonts/lato/Lato-Light.ttf);
 }
 
-/* latin */
 @font-face {
-  font-family: 'Oxygen';
+  font-family: "Lato";
   font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/lato/Lato-Regular.ttf);
+}
+
+@font-face {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 700;
+  src: url(../fonts/lato/Lato-Bold.ttf);
+}
+
+@font-face {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 900;
+  src: url(../fonts/lato/Lato-Black.ttf);
+}
+
+@font-face {
+  font-family: "Lato";
+  font-style: italic;
+  font-weight: 100;
+  src: url(../fonts/lato/Lato-HairlineItalic.ttf);
+}
+
+@font-face {
+  font-family: "Lato";
+  font-style: italic;
   font-weight: 300;
-  src: local("Oxygen Light"), local("Oxygen-Light"), url(../fonts/oxygen/AwBqWF2kjhlybWamaKMPcVtXRa8TVwTICgirnJhmVJw.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+  src: url(../fonts/lato/Lato-LightItalic.ttf);
 }
 
-/* latin-ext */
 @font-face {
-  font-family: 'Oxygen';
-  font-style: normal;
+  font-family: "Lato";
+  font-style: italic;
   font-weight: 400;
-  src: local("Oxygen"), local("Oxygen-Regular"), url(../fonts/oxygen/IIPDrwV5KNJo5-LaFlLy2fesZW2xOQ-xsNqO47m55DA.woff2) format("woff2");
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+  src: url(../fonts/lato/Lato-Italic.ttf);
 }
 
-/* latin */
 @font-face {
-  font-family: 'Oxygen';
-  font-style: normal;
-  font-weight: 400;
-  src: local("Oxygen"), local("Oxygen-Regular"), url(../fonts/oxygen/78wGxsHfFBzG7bRkpfRnCQ.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-/* latin-ext */
-@font-face {
-  font-family: 'Oxygen';
-  font-style: normal;
+  font-family: "Lato";
+  font-style: italic;
   font-weight: 700;
-  src: local("Oxygen Bold"), local("Oxygen-Bold"), url(../fonts/oxygen/fSUtikcZd7PHZK0t2hzTeRJtnKITppOI_IvcXXDNrsc.woff2) format("woff2");
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+  src: url(../fonts/lato/Lato-BoldItalic.ttf);
 }
 
-/* latin */
 @font-face {
-  font-family: 'Oxygen';
-  font-style: normal;
-  font-weight: 700;
-  src: local("Oxygen Bold"), local("Oxygen-Bold"), url(../fonts/oxygen/yVHpdQrmTj9Kax1tmFSx2ltXRa8TVwTICgirnJhmVJw.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+  font-family: "Lato";
+  font-style: italic;
+  font-weight: 900;
+  src: url(../fonts/lato/Lato-BlackItalic.ttf);
 }
 
 html {
@@ -114,9 +130,10 @@ html {
 
 body {
   height: 100%;
-  font-family: Oxygen, Helvetica, Arial, sans-serif;
+  font-family: Lato, Helvetica, Arial, sans-serif;
+  font-style: normal;
   font-size: 14px;
-  font-weight: 100;
+  font-weight: 400;
   line-height: 20px;
   min-width: 320px;
 }
